// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View submitted application page displays a "Resume latest draft" button when changes are requested, and there is already a newer draft (not submitted) 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      <React.Fragment>
        Version: 
        1
        <br />
      </React.Fragment>
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <ApplicationDecision
        actionRequired={true}
        decision="REQUESTED_CHANGES"
        reviewComments={
          Array [
            "This is a comment.",
          ]
        }
      >
        <p
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          <strong>
            Note:
          </strong>
           This application has been revised in a more recent draft.
        </p>
        <Link
          href="/reporter/application/testing"
        >
          <a>
            <Button
              active={false}
              disabled={false}
              variant="primary"
            >
              Resume latest draft
            </Button>
          </a>
        </Link>
      </ApplicationDecision>
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REQUESTED_CHANGES",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 2,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page displays a "Revise" button when changes are requested, and there is no newer revision 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <ApplicationDecision
        actionRequired={true}
        decision="REQUESTED_CHANGES"
        reviewComments={
          Array [
            "The operator name is slightly different from a previous match we have on file: should it be \\"Virtucon Limited\\" instead of \\"Virtucon Ltd\\"?",
          ]
        }
      >
        <Relay(ReviseApplicationButton)
          application={
            Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "The operator name is slightly different from a previous match we have on file: should it be \\"Virtucon Limited\\" instead of \\"Virtucon Ltd\\"?",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REQUESTED_CHANGES",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            }
          }
        />
      </ApplicationDecision>
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "The operator name is slightly different from a previous match we have on file: should it be \\"Virtucon Limited\\" instead of \\"Virtucon Ltd\\"?",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REQUESTED_CHANGES",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page does not show an application decision when unreviewed 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "SUBMITTED",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page should render a "View most recent submission" button when viewing an older submission (viewed version < last submitted version) 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <Alert
        closeLabel="Close alert"
        show={true}
        transition={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "displayName": "Fade",
            "render": [Function],
          }
        }
        variant="secondary"
      >
        <p
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          <strong>
            Note:
          </strong>
           There is a more recently submitted version of this application.
        </p>
        <Link
          href={
            Object {
              "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
              "query": Object {
                "applicationId": "testing",
                "versionNumber": 2,
              },
            }
          }
          passHref={true}
        >
          <Button
            active={false}
            disabled={false}
            variant="primary"
          >
            View most recent submission
          </Button>
        </Link>
      </Alert>
      <ApplicationDecision
        actionRequired={false}
        decision="REQUESTED_CHANGES"
        reviewComments={
          Array [
            "This is a comment.",
          ]
        }
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REQUESTED_CHANGES",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 2,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 2,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page should render a "View most recent submission" button when viewing an older submission that has BOTH a newer submission, and at least two newer drafts 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      <React.Fragment>
        Version: 
        1
        <br />
      </React.Fragment>
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <Alert
        closeLabel="Close alert"
        show={true}
        transition={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "displayName": "Fade",
            "render": [Function],
          }
        }
        variant="secondary"
      >
        <p
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          <strong>
            Note:
          </strong>
           There is a more recently submitted version of this application.
        </p>
        <Link
          href={
            Object {
              "pathname": "/reporter/application/[applicationId]/version/[versionNumber]/view",
              "query": Object {
                "applicationId": "testing",
                "versionNumber": 2,
              },
            }
          }
          passHref={true}
        >
          <Button
            active={false}
            disabled={false}
            variant="primary"
          >
            View most recent submission
          </Button>
        </Link>
      </Alert>
      <ApplicationDecision
        actionRequired={false}
        decision="REQUESTED_CHANGES"
        reviewComments={
          Array [
            "This is a comment.",
          ]
        }
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REQUESTED_CHANGES",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 3,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 2,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page shows approval when reviewed and approved 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <ApplicationDecision
        actionRequired={false}
        decision="APPROVED"
        reviewComments={
          Array [
            "This is a comment.",
          ]
        }
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "APPROVED",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page shows rejection when reviewed and rejected 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <ApplicationDecision
        actionRequired={false}
        decision="REJECTED"
        reviewComments={
          Array [
            "This is a comment.",
          ]
        }
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "This is a comment.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REJECTED",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`View submitted application page shows reviewer comments when reviewed and rejected 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
    }
  }
  showSubheader={true}
  title="Summary of your application"
  titleControls={
    <div>
      Application ID: 
      1
      <br />
      BC GHG ID: 
      123456
    </div>
  }
>
  <Row
    noGutters={false}
  >
    <Col
      md={12}
    >
      <ApplicationDecision
        actionRequired={false}
        decision="REJECTED"
        reviewComments={
          Array [
            "We cannot accept applications from facilities that are either not regulated under GGIRCA, or which paid no carbon tax in 2020.",
          ]
        }
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
            },
          }
        }
        diffQuery={null}
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ReviseApplicationButtonContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "reviewCommentsByApplicationReviewStepId": Object {
                        "edges": Array [
                          Object {
                            "node": Object {
                              "description": "We cannot accept applications from facilities that are either not regulated under GGIRCA, or which paid no carbon tax in 2020.",
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
              "applicationRevisionByStringVersionNumber": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                },
              },
              "applicationRevisionStatus": Object {
                "applicationRevisionStatus": "REJECTED",
              },
              "facilityByFacilityId": Object {
                "bcghgid": "123456",
              },
              "latestDraftRevision": Object {
                "versionNumber": 1,
              },
              "latestSubmittedRevision": Object {
                "versionNumber": 1,
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
            },
          }
        }
        review={false}
      />
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;
